all mca images addes

--- a/contactus.html
+++ b/contactus.html
@@ -134,26 +134,26 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us bounce-in-fwd">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Sitakanta bej.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Sitakanta Bej</div>
                                         <div class=" card-contactus sub-title">MCA</div>
                                         <ul class="social-network social-circle center">
                                             <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
-                                            <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-phone"></i></a></li>
                                             <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us bounce-in-fwd">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Swaraji Pattnaik.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Swaraji Patnaik</div>
                                         <div class=" card-contactus sub-title">MCA</div>
                                         <ul class="social-network social-circle center">
                                             <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
-                                            <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-phone"></i></a></li>
                                             <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
                                         </ul>
                                     </div>
@@ -215,7 +215,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Ronimama baghara.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Ronimama Baghar</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -270,7 +270,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Pradosh kumar lenka.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Pradosh Ku. Lenka</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -350,7 +350,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Amisha samal.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Amisa Samal</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -404,7 +404,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Satyasarathi Barik.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Satya Sarathi Barik</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -417,7 +417,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Simrani Rout.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Simarani Rout</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -484,7 +484,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Alina rout.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Alina Rout</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -539,7 +539,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Satyaprakash rout.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Satyaprakash Rout</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -552,9 +552,9 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Swetika nayak.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
-                                        <div class=" card-contactus title">Swatika Nayak</div>
+                                        <div class=" card-contactus title">Swetika Nayak</div>
                                         <div class=" card-contactus sub-title">MCA</div>
                                         <ul class="social-network social-circle center">
                                             <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
@@ -607,7 +607,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Neelesh Kumar mohanty.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Neelesh Mohanty</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -620,7 +620,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Sumitra Singh.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Sumitra Singh</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -688,7 +688,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Pragyan paramita madali.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Pragya Paramita</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -743,7 +743,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Dibakar nayak.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Dibakar Nayak</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -756,9 +756,9 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Jogomaya mishra.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
-                                        <div class=" card-contactus title">Jagamaya Mishra</div>
+                                        <div class=" card-contactus title">Jogamaya Mishra</div>
                                         <div class=" card-contactus sub-title">MCA</div>
                                         <ul class="social-network social-circle center">
                                             <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
@@ -824,7 +824,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Sushreenibedita pradhan.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Sushree Nibedita</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -892,7 +892,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Pujarani rout.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Pujarani Rout</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -1015,7 +1015,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Srinivas Sahu.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Srinivash Prayag Sahu</div>
                                         <div class=" card-contactus sub-title">MCAr</div>
@@ -1028,7 +1028,7 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Poonam Das.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Poonam Das</div>
                                         <div class=" card-contactus sub-title">MCA</div>
@@ -1164,9 +1164,9 @@
                                 </div>
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Rashmirekha das.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
-                                        <div class=" card-contactus title">Rashmi Rekha Das</div>
+                                        <div class=" card-contactus title">Rashmi Rekha Dash</div>
                                         <div class=" card-contactus sub-title">MCA</div>
                                         <ul class="social-network social-circle center">
                                             <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
@@ -1219,7 +1219,7 @@
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
                                     <div class="card-contact-us">
-                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <img class="card-contactus image" src="images/team_mca/Gyana Ranjan behera.jpg" alt="">
                                         <div class=" card-contactus circle"></div>
                                         <div class=" card-contactus title">Gyana Ranjan Behera</div>
                                         <div class=" card-contactus sub-title">MCA</div>
