--- a/theme.html
+++ b/theme.html
@@ -7,9 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/x-icon" href="./favicon.ico" />
     <title>Theme | Technovation 2020</title>
+
+    <link rel="stylesheet" href="css/theme.css">
 </head>
 
-<body>
+<body bgcolor="black">
+    <!-- <div style="width: 100vw;height:100vh;background:url('images/wizard_bg.jpg');background-size:cover;background-position:0 0;opacity:0.7;"> -->
+    <div class="bg"></div>
+    <div class="lightning flashit"></div>
 
 </body>
 
