theme timeline changes

--- a/theme-t.html
+++ b/theme-t.html
@@ -16,7 +16,7 @@
     <div class="bg"></div>
     <div class="lightning flashit"></div>
     <div class="container-fluid">
-        <div class="theme-heading-card">
+        <div class="theme-heading-card-1">
             <div class="theme-heading">
                 THEME
             </div>
@@ -35,7 +35,7 @@
     <br>
 
     <div class="container-fluid">
-        <div class="theme-heading-card">
+        <div class="theme-heading-card-2">
             <div class="theme-heading">TIMELINE</div>
             <div class="timeline">
                 <div class="t-container left">
