--- a/theme-t.html
+++ b/theme-t.html
@@ -9,12 +9,49 @@
     <title>Theme | Technovation 2020</title>
 
     <link rel="stylesheet" href="css/theme.css">
+    <script>
+        function openNav() {
+            document.getElementById('sidenavbar').style.left = 0;
+            document.body.style.marginLeft = '250px';
+        }
+
+        function closeNav() {
+            document.getElementById('sidenavbar').style.left = '-250px';
+            document.body.style.marginLeft = '0px';
+        }
+    </script>
 </head>
 
 <body bgcolor="black">
+    <div class="sidenavbar" id="sidenavbar">
+
+        <div onclick="closeNav();" style="background:rgba(0,0,0,0.4);cursor:pointer;color:white;font-size:2.3em;width: 40px;height:40px;margin-top:30px;margin-left:200px;text-align:center;">&times;</div>
+        <ul>
+            <li>
+                <a href="javascript:void(0)">Home</a>
+            </li>
+            <li>
+                <a href="javascript:void(0)">Events</a>
+            </li>
+            <li>
+                <a href="javascript:void(0)">Gallery</a>
+            </li>
+            <li>
+                <a href="javascript:void(0)">Sponsors</a>
+            </li>
+            <li>
+                <a href="javascript:void(0)">Contact Us</a>
+            </li>
+        </ul>
+    </div>
+    <div style="font-size: 2.3em;margin:60px 60px;color:white;cursor:pointer;" onclick="openNav();">&#9776;</div>
     <!-- <div style="width: 100vw;height:100vh;background:url('images/wizard_bg.jpg');background-size:cover;background-position:0 0;opacity:0.7;"> -->
     <div class="bg"></div>
+    <audio autoplay loop>
+        <source src="media/Thunde.mp3">
+    </audio>
     <div class="lightning flashit"></div>
+
     <div class="container-fluid">
         <div class="theme-heading-card-1">
             <div class="theme-heading">
