--- a/theme-t.html
+++ b/theme-t.html
@@ -47,8 +47,8 @@
     <div style="font-size: 2.3em;margin:60px 60px;color:white;cursor:pointer;" onclick="openNav();">&#9776;</div>
     <!-- <div style="width: 100vw;height:100vh;background:url('images/wizard_bg.jpg');background-size:cover;background-position:0 0;opacity:0.7;"> -->
     <div class="bg"></div>
-    <audio autoplay loop>
-        <source src="media/Thunde.mp3">
+    <audio loop id="thunder-audio">
+        <source src="./media/Thunde.mp3" type="audio/mpeg">
     </audio>
     <div class="lightning flashit"></div>
 
@@ -115,6 +115,11 @@
         </div>
     </div>
 
+
+
+    <script>
+        document.getElementById("thunder-audio").play();
+    </script>
     <!-- <script type='text/javascript' src='http://getfirebug.com/releases/lite/1.2/firebug-lite-compressed.js'></script> -->
 </body>
 
