some changes to contact us

--- a/contactus.html
+++ b/contactus.html
@@ -74,7 +74,8 @@
                 <div class="row">
                     <div class="col-lg-5 col-md-5 col-sm-5  col-xs-12">
                         <div class="contactus-content-h">
-                            <a class="heading selected" id="chief-cood">Chief Coordinator</a>
+                            <a class="heading selected" id="patrons">Patrons</a>
+                            <a class="heading" id="chief-cood">Student Coordinator</a>
                             <a class="heading" id="chief-e-cood">Chief Event Coordinator</a>
                             <a class="heading" id="treasure">Treasurer</a>
                             <a class="heading" id="chief-admin">Chief Admin</a>
@@ -96,8 +97,109 @@
                     </div>
                     <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12">
                         <!-- side block -->
+                        <!-- Block 0 -->
+                        <div id="patrons-b" class="container-fluid  d-block">
+                            <!-- row 1 -->
+                            <div class="row">
+                                <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                    <div class="card-contact-us bounce-in-fwd">
+                                        <img class="card-contactus image" src="images/teachers/snm.jpg" alt="">
+                                        <div class=" card-contactus circle"></div>
+                                        <div class=" card-contactus title doadjust">Dr. Sarojananda Mishra</div>
+                                        <div class=" card-contactus sub-title">Chief Coordinator</div>
+                                        <ul class="social-network social-circle center">
+                                            <li><a class="icoFacebook" href="https://www.facebook.com/sankalp.rath.52"><i class="fa fa-facebook"></i></a></li>
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-phone"></i></a></li>
+                                            <li><a class="icoFacebook" href="https://instagram.com/1.1_dollar_bill?igshid=82087b5pg9f8"><i class="fa fa-instagram"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                    <div class="card-contact-us bounce-in-fwd">
+                                        <img class="card-contactus image" src="https://images.unsplash.com/photo-1519999482648-25049ddd37b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2126&q=80" alt="">
+                                        <div class=" card-contactus circle"></div>
+                                        <div class=" card-contactus title doadjust">Prof. Sanjay Ku. Patra</div>
+                                        <div class=" card-contactus sub-title">Convenor</div>
+                                        <ul class="social-network social-circle center">
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-twitter"></i></a></li>
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+
+                            </div>
+
+                            <!-- row 2 -->
+                            <div class="row">
+                                <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                    <div class="card-contact-us bounce-in-fwd">
+                                        <img class="card-contactus image" src="images/" alt="">
+                                        <div class=" card-contactus circle"></div>
+                                        <div class=" card-contactus title doadjust">Prof. Biswanath Sethi</div>
+                                        <div class=" card-contactus sub-title">Faculty Coordinator</div>
+                                        <ul class="social-network social-circle center">
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-phone"></i></a></li>
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                    <div class="card-contact-us bounce-in-fwd">
+                                        <img class="card-contactus image" src="images/teachers/niroj_ku_pani.jpg" alt="">
+                                        <div class=" card-contactus circle"></div>
+                                        <div class=" card-contactus title doadjust">Prof. Niroj Ku. Pani</div>
+                                        <div class=" card-contactus sub-title">Faculty Coordinator</div>
+                                        <ul class="social-network social-circle center">
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-phone"></i></a></li>
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                            </div>
+                            <!-- row 3 -->
+                            <div class="row">
+                                <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                    <div class="card-contact-us bounce-in-fwd">
+                                        <img class="card-contactus image" src="images" alt="">
+                                        <div class=" card-contactus circle"></div>
+                                        <div class=" card-contactus title doadjust">Prof. Susant Ku. Sahoo</div>
+                                        <div class=" card-contactus sub-title">Faculty Coordinator</div>
+                                        <ul class="social-network social-circle center">
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-phone"></i></a></li>
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
+                                    <div class="card-contact-us bounce-in-fwd">
+                                        <img class="card-contactus image" src="images/teachers/subhendu_rout.jpg" alt="">
+                                        <div class=" card-contactus circle"></div>
+                                        <div class=" card-contactus title doadjust">Prof. Subhendu Bh. Rout</div>
+                                        <div class=" card-contactus sub-title">Faculty Coordinator</div>
+                                        <ul class="social-network social-circle center">
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-facebook"></i></a></li>
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-phone"></i></a></li>
+                                            <li><a class="icoFacebook" href=""><i class="fa fa-instagram"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+
+                            </div>
+
+
+
+                        </div>
+
+
+
                         <!-- block 1 chief-cood-b -->
-                        <div id="chief-cood-b" class="container-fluid  d-block">
+                        <div id="chief-cood-b" class="container-fluid  d-none">
                             <!-- row 1 -->
                             <div class="row">
                                 <div class="col-sm-12 col-md-12 col-lg-5 offset-lg-1">
