--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <a href="./index-fut.html"><button class="c-item btn btn-outline-primary wow zoomIn"><b>TAKE A TOUR</b></button></a>
         </div>
 
-        <img src="./images/tech.png" style="display: none;">
+        <img src="./images/tech2.png" style="display: none;">
         <br>
         <br>
         <br>
@@ -87,7 +87,8 @@
             <div class="container-flex text-center text-white">
                 <div class="msg wow zoomIn mx-auto">
                     <div class="msg-title"> Technovation</div>
-                    <div class="msg-body"> The Techno-Cultural fest of the department of CSEA, IGIT, Sarang is back again with a bang to provide a platform to the young ubiquotous talents to give them a new direction, and showcase their innovative and competitive skills.
+                    <div class="msg-body"> The Techno-Cultural fest of the department of <span>CSEA, IGIT,</span> Sarang is back again with a bang to provide a platform to the young ubiquotous talents to give them a new direction, and showcase their innovative and competitive
+                        skills.
                     </div>
                 </div>
             </div>
@@ -99,8 +100,7 @@
             <div class="container-flex text-center text-white">
                 <div class="msg wow zoomIn mx-auto">
                     <div class="msg-title"> CSEA</div>
-                    <div class="msg-body"> Recognised by the Computer Society of India, due to its advanced technical laboratories, cyber club, diversity of courses offered, numerous acheivements and recruitment policy. It is one of the best departments of IGIT emerged over
-                        the years.
+                    <div class="msg-body"> Recognised by the Computer Society of India, due to its advanced technical laboratories, cyber club, diversity of courses offered, numerous acheivements and recruitment policy. It is one of the best departments of <span>IGIT</span>                        emerged over the years.
                     </div>
                 </div>
             </div>
@@ -112,7 +112,8 @@
             <div class="container-flex text-center text-white">
                 <div class="msg wow zoomIn mx-auto">
                     <div class="msg-title"> IGIT</div>
-                    <div class="msg-body"> IGIT was establised directly by the Govt. of Odisha in the name of OCE. Prior to this, under the name of MPT,it offered courses in Diploma. Later MPT was merged and the management was transfered to an autonomous society. </div>
+                    <div class="msg-body"> <span>IGIT</span> was establised directly by the Govt. of Odisha in the name of <span>OCE</span>. Prior to this, under the name of <span>MPT</span>,it offered courses in Diploma. Later <span>MPT</span> was merged and the management
+                        was transfered to an autonomous society. </div>
                 </div>
             </div>
 
